fix ID naming and test circle vs text. Text is being selected when selecting the ring on mobile device. The test is if the circle will do the same or not.

--- a/area113/svg/ring/styles.css
+++ b/area113/svg/ring/styles.css
@@ -3,18 +3,18 @@ svg{
   /* border:1px solid black; */
 }
 
-#hovering{
+#ring{
   stroke: black;
   stroke-width: 9.0;
  }
 
 #freq{
-  fill: none;
+  /* fill: none; */
   opacity: 0.0;
  }
 
-#hovering:hover+#freq, #hovering:active+#freq{
-  fill: black;
+#ring:hover+#freq, #ring:active+#freq{
+  /* fill: black; */
   opacity: 1.0;
   transition: 1.0s;
  }
